# Voice_helper

./: .gitignore  Command.py  PreProcess.py  README.md  Stream.py  main.py  pyproject.toml  recognition.py  requirements.txt  setup.cfg  setup.py
ASR/: ASR.py  segmentation.py
Backend/: app.py  config.ini  main.py  style.kv
Backend/ASR/: ASR.py
Backend/commands/: command.json  command.py  commands.json  commands.py
Backend/commands/scripts/: script.py
GUI/: main.py  package.json  style.kv
GUI/JS_draft/: package-lock.json
GUI/JS_draft/src/: index.css  index.html  index.js
GUI/src/: index.html
xls/: БалАЭС.XLS  САЭС.XLS
