[metadata]
name = voicehelper-auteam
version = 0.0.1
url = https://github.com/auteam/Voice_helper
author = auteam
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = demo voice helper
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8